# Linkedin_Post_Generator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  test_pipeline.py  test_sources.py  voice.md
.github/workflows/: deploy-demo.yml  deploy.yml
agents/: __init__.py  post_writer.py  topic_suggester.py  trend_analyzer.py
bot/: __init__.py  telegram_bot.py
config/: brand_voice.md  hooks.md  settings.py
data/example_posts/: examples.md
demo/: .env.example  package-lock.json  package.json
demo/src/app/: globals.css  layout.tsx  page.tsx
demo/src/app/api/analyze/: route.ts
demo/src/app/api/draft/: route.ts
demo/src/app/api/rate-limit/: route.ts
demo/src/app/api/refine/: route.ts
demo/src/app/api/research/: route.ts
demo/src/app/api/sources/: route.ts
demo/src/app/api/suggest/: route.ts
demo/src/components/: ArchitectureDiagram.tsx  ExamplePosts.tsx  Hero.tsx  LinkedInPostPreview.tsx  PhaseCard.tsx  PipelineDemo.tsx  RateLimitBanner.tsx  StreamingText.tsx  TechStack.tsx  TopicPicker.tsx
demo/src/lib/: agents.ts  hardcoded-topics.ts  prebaked-data.ts  prompts.ts  rate-limit.ts  sources.ts  writer.ts
demo/src/types/: index.ts
deploy/: DEPLOY.md  deploy.sh  linkedin-bot.service  setup.sh
sources/: __init__.py  hackernews.py  models.py  rss_feeds.py  tavily_source.py
